# MoE-LLaVA-JP

./: .gitignore  pyproject.toml
moellava/: __init__.py  conversation.py
moellava/model/: __init__.py  builder.py  llava_arch.py
moellava/model/language_model/: llava_gpt2.py  llava_gpt2_moe.py  llava_llama.py
moellava/train/: llava_trainer.py  train.py  train_mem.py
scripts/download_dataset/: model.sh  moe.sh  pretrain.sh
scripts/v1/llm_jp/: finetune.sh  finetune_moe.sh  pretrain.sh
