[tool.poetry]
name = "moe-llava-jp"
version = "0.1.0"
description = ""
authors = ["Junhyeong Kim <junhyeong.kim@brainpad.co.jp>"]
readme = "README.md"
packages = [
    { include = "moellava" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
transformers = "^4.39.2"
einops = "^0.7.0"
einops-exts = "^0.0.4"
timm = "^0.9.16"
tokenizers = "^0.15.2"
sentencepiece = "^0.2.0"
accelerate = "^0.28.0"
peft = "^0.10.0"
bitsandbytes = "^0.43.0"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
deepspeed = "^0.14.0"
ninja = "^1.11.1.1"
tensorboardx = "^2.6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
