[tool.poetry]
name = "moe-llava-jp"
version = "0.1.0"
description = ""
authors = ["Junhyeong Kim <junhyeong.kim@brainpad.co.jp>"]
packages = [
    { include = "moellava" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
transformers = "^4.39.2"
einops = "^0.7.0"
einops-exts = "^0.0.4"
timm = "^0.9.16"
tokenizers = "^0.15.2"
sentencepiece = "^0.2.0"
accelerate = "^0.28.0"
peft = "^0.10.0"
bitsandbytes = "^0.43.0"
tiktoken = "^0.6.0"
packaging = "^24.0"
click = "^8.1.7"
mpi4py = "^3.1.6"

[tool.poetry.group.dev.dependencies]
deepspeed = "^0.14.0"
ninja = "^1.11.1.1"
tensorboardx = "^2.6.2.2"
huggingface-hub = {extras = ["cli"], version = "^0.22.2"}
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.4"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
